Agregando las rutas delete y edit de usuarios

--- a/src/public/css/cardUser.css
+++ b/src/public/css/cardUser.css
@@ -61,6 +61,16 @@ img.img-user {
     font-size: 15px;
     flex-wrap: wrap;
 }
+a.back {
+    color: var(--blanco);
+    display: flex;
+    justify-content: center;
+}
+a.edit {
+    display: flex;
+    justify-content: center;
+    color: var(--blanco);
+}
 
 /* Tablet */
 @media (min-width: 768px) {
