--- a/src/views/users/editUser.ejs
+++ b/src/views/users/editUser.ejs
@@ -5,28 +5,28 @@
             <main class="editUser">
                 <div class="overlay" id="overlay">
                     <div class="formularioRegistro" id="formularioRegistro">
-                        <form action="" method="dialog" class="crear-formulario">
+                        <form class="form-horizontal" method="post"  action="/detail/edit/<%= user.id %>?_method=PUT" enctype="multipart/form-data">
                             <div class="col-12">
-                                <h2 class="products-title">Estás editando: User id</h2>
+                                <h2 class="products-title">Estás editando: Usuario <%= user.id %></h2>
                             </div>
                             <div class="divNombreApellido">
                                 <div class="nombre">
-                                    <label>Nombre:</label>
-                                    <input type="text" name="nombreUsuario" id="nombreUsuario" class="input-control">
+                                    <label>Nombres:</label>
+                                    <input type="text" name="first_name" id="first_name" class="input-control" value="<%= user.first_name %>"> 
                                 </div>
                                 <div class="apellido">
                                     <label>Apellidos:</label>
-                                    <input type="text" name="apellidoUsuario" class="input-control">
+                                    <input type="text" name="last_name" id="last_name" class="input-control" value="<%= user.last_name %>"> 
                                 </div>
                             </div>
                             <div class="container">
                             <div class="celular">
                                 <label>Celular:</label>
-                                <input type="text" name="celularUsuario" class="input-control">
+                                <input type="number" name="phone" id="phone" class="input-control" value="<%= user.phone %>">
                             </div>
                             <div class="idUser">
                                 <label>Identificación:</label>
-                                <input type="number" name="id" class="input-control">
+                                <input type="number" id="id_user" name="id_user" class="input-control" value="<%= user.id_user %>">
                             </div>
                             <div class="img-edit">
                                 <label for="image" class="form-label">Imagen:</label>
@@ -36,20 +36,17 @@
                             <div class="divCorreoContrasena">
                                 <div class="correo">
                                     <label>Correo:</label>
-                                    <input type="text" name="correoUsuario" id="correoUsuario" class="input-control">
+                                    <input type="email" name="email" id="email"  class="input-control" value="<%= user.email %>">
                                 </div>
                                 <div class="contrasena">
                                     <label>Contraseña:</label>
-                                    <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
-                                        class="input-control">
+                                    <input type="password" name="password" id="password" class="input-control" value="<%= user.password %>">
                                 </div>
                             </div>
                            
     
                             <div class="boton-guardar">
-                                <button type="submit" class="boton-formulario">EDITAR</button>
                                 <button type="submit" class="boton-formulario">GUARDAR</button>
-                                <button type="delete" class="boton-formulario">BORRAR</button>
                             </div>
                         </form>
                     </div>
