--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -8,7 +8,7 @@
                         <h2>Completa tus datos</h2>
                         <div class="divNombreApellido">
                             <div class="nombre">
-                                <label>Nombre:</label>
+                                <label>Nombres:</label>
                                 <input type="text" name="first_name" id="first_name" class="input-control">
                             </div>
                             <div class="apellido">
@@ -37,8 +37,7 @@
                             </div>
                             <div class="contrasena">
                                 <label>Contraseña:</label>
-                                <input type="password" name="password" id="password"
-                                    class="input-control">
+                                <input type="password" name="password" id="password" class="input-control">
                             </div>
                         </div>
 
