--- a/src/views/users/cardUser.ejs
+++ b/src/views/users/cardUser.ejs
@@ -3,23 +3,28 @@
     <body>
         <%- include('../partials/header') %>
             <main>
-                <% users.forEach(users=> { %>
+                <% let date = new Date(user.aparicion)
+                date = date.getFullYear()
+            %>
                 <div class="container">
-                   <a href="editUser">
                     <div class="img-user">
-                        <img class="img-user" src="<%= users.image %>">
+                        <img class="img-user" src="../images/user/<%= user.image %>"">
                     </div>
                     <div class="container-information">
-                        <div class="id"><%= users.id_user %></div>
-                        <div class="name"><%= users.first_name %></div>
-                        <div class="lastname"><%= users.last_name %></div>
-                        <div class="phone"><%= users.phone %></div>
-                        <div class="email"><%= users.email %></div>
+                        <div class="id"><%= user.id_user %></div>
+                        <div class="name"><%= user.first_name %></div>
+                        <div class="lastname"><%= user.last_name %></div>
+                        <div class="phone"><%= user.phone %></div>
+                        <div class="email"><%= user.email %></div>
                     </div>
-                </a>
             </div>
-            
-            <% }); %>
+            <div class="boton-guardar">
+                <button type="submit" class="boton-formulario"><a class="back" href="/admin/adminUser?admin=true">REGRESAR</a></button>
+                <button type="submit" class="boton-formulario"><a class="edit" href="/detail/edit/<%= user.id %>">EDITAR</a></button>
+                <form class="delete" action="/detail/delete/<%= user.id %>?_method=DELETE" method="POST">
+                <button type="submit" class="boton-delete">ELIMINAR</button>
+            </form>
+            </div>
             </main>
             <%- include('../partials/footer') %>
     </body>
