--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -54,7 +54,7 @@
 						<a href="#" class="buy-now-button">COMPRAR AHORA</a>
 						<hr>
 
-						<a href="/products/edit/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
+						<a href="/editProduct/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
 						<form action="/products/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
 							<button type="submit" class="action-button delete">ELIMINAR</button>
 						</form>
