se agrega la propiedad color a home.ejs y productdetail.ejs

--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -29,7 +29,7 @@
 				</div>
 				<div class="col-12 col-lg-4">
 					<article class="product-detail-info">
-						<h2 class="product-detail-title"><%= product.name %></h2>
+						<h2 class="product-detail-title"><%= product.name %> <%= product.color %></h2>
 						
 							<p class="product-detail-price small">
 								<span>$<%= product.price %></span>
