--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -55,7 +55,7 @@
 						<hr>
 
 						<a href="/editProduct/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
-						<form action="/products/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+						<form action="/productdetail/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
 							<button type="submit" class="action-button delete">ELIMINAR</button>
 						</form>
 					</article>
