Se organizan errores del formulario de edición de producto

--- a/src/views/product/editProduct.ejs
+++ b/src/views/product/editProduct.ejs
@@ -15,24 +15,24 @@
                             <div class="div-name-color">
                                 <div class="nameProduct">
                                     <label class="labelEdit">Nombre del producto</label>
-                                    <input type="text" name="nombreProducto" class="inputEdit" id="name"
+                                    <input type="text" name="name" class="inputEdit" id="name"
                                         value="<%= product.name %>">
                                 </div>
                                 <div class="colorProduct">
                                     <label class="labelEdit">Color</label>
-                                    <input type="text" name="colorProducto" class="inputEdit" id="price"
+                                    <input type="text" name="color" class="inputEdit" id="color"
                                         value="<%= product.color %>">
                                 </div>
                             </div>
                             <div class="price-discount">
                                 <div class="priceProduct">
                                     <label class="labelEdit">Precio del producto</label>
-                                    <input type="text" name="precioProducto" class="inputEdit" id="price"
+                                    <input type="text" name="price" class="inputEdit" id="price"
                                         value="<%= product.price %>">
                                 </div>
                                 <div class="discountProduct">
                                     <label class="labelEdit">Descuento</label>
-                                    <input type="text" name="descuentoProducto" class="inputEdit" id="discount"
+                                    <input type="text" name="discount" class="inputEdit" id="discount"
                                         value="<%= product.discount %>">
                                 </div>
                             </div>
@@ -43,7 +43,7 @@
                             </div>
                             <div class="divDescriptionProduct">
                                 <label for="description" class="labelEdit">Descripción</label>
-                                <textarea name="descripcionProducto" class="descriptionProduct"
+                                <textarea name="description" class="descriptionProduct"
                                     id="description"><%= product.description %></textarea>
 
                             </div>
