--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -21,19 +21,10 @@
                             <input type="file" placeholder="Foto del producto" name="image" id="fotoProducto" class="inputFoto"
                                 required>
                         </div>
-                        <div class="controlCategoria">
-                            <div class="col-12 col-md-6">
-                                <label for="category" class="form-label">Categoría:</label>
-                                <select name="category" id="category" class="form-input">
-                                    <option value="">Elegí</option>
-                                    <option value="in-sale">En oferta</option>
-                                    <option value="visited">Últimos agregados</option>
-                                </select>
-                            </div>
-                        </div>
+                        
                         <div class="control-for">
                             <input type="text" placeholder="Colores del producto:" name="color" class="input-control1"
-                                id="coloresProducto">
+                                id="color">
                         </div>
                         <div class="control-for">
                             <input type="text" placeholder="Precio del producto:" name="price" class="input-control1"
